# truelayer2firefly

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  exception_handlers.py  exceptions.py  importer2firefly.py  index.html  mkdocs.yml  pyproject.toml  scheduler.py  sitemap.xml  truelayer2firefly.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  mkdocs-publish.yml  release_drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report,yml  feature_request.yml
.github/workflows/: docker-publish.yml  linting.yaml  lock.yaml  mkdocs-publish.yml  pr-labels.yaml  release-drafter.yaml  stale.yaml  sync-labels.yaml  typing.yaml
clients/: firefly.py  truelayer.py
docs/: index.md
docs/getting_started/: installation.md  scheduler.md
getting_started/installation/: index.html
getting_started/scheduler/: index.html
search/: search_index.json
templates/: configuration.html  import.html  index.html  layout.html
tests/: __init__.py  conftest.py  test_cards.py  test_truelayer_client.py
