[tool.poetry]
name = "truelayer2firefly"
version = "0.1.0"
description = "A connector between TrueLayer and Firefly III"
authors = ["Erwin Douna <e.douna@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "clients" }, { include = "truelayer2firefly" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
yarl = "^1.20.0"
requests = "^2.32.3"
aiohttp = "^3.11.18"
asyncio = "^3.4.3"
humanize = "^4.12.3"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
mkdocs-material = "^9.6.14"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = {version = "7.8.0", extras = ["toml"]}
mypy = "1.15.0"
pre-commit = "4.2.0"
pre-commit-hooks = "5.0.0"
pylint = "3.3.7"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-cov = "6.1.1"
ruff = "0.11.10"
syrupy = "4.9.1"
yamllint = "1.37.1"
datamodel-code-generator = ">=0.28.5,<0.31.0"
respx = "^0.22.0"
[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["pyportainer"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
