[tool.poetry]
name = "truelayer2firefly"
version = "0.1.0"
description = "A connector between TrueLayer and Firefly III"
authors = ["Erwin Douna <e.douna@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "clients" }, { include = "truelayer2firefly" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.122.0"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pydantic = "^2.12.4"
yarl = "^1.22.0"
requests = "^2.32.5"
aiohttp = "^3.13.2"
asyncio = "^4.0.0"
humanize = "^4.14.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
mkdocs-material = "^9.6.23"
apscheduler = "^3.11.1"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = {version = "7.12.0", extras = ["toml"]}
mypy = "1.18.2"
pre-commit = "4.5.0"
pre-commit-hooks = "6.0.0"
pylint = "4.0.3"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "7.0.0"
ruff = "0.14.6"
syrupy = "5.0.0"
yamllint = "1.37.1"
datamodel-code-generator = ">=0.28.5,<0.36.0"
respx = "^0.22.0"
[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["pyportainer"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
